WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276262
[WebGPU]
https://compute.toys/view/1173
fails to load
https://bugs.webkit.org/show_bug.cgi?id=276262
Summary
[WebGPU] https://compute.toys/view/1173 fails to load
Mike Wyrzykowski
Reported
2024-07-05 12:14:29 PDT
[WebGPU]
https://compute.toys/view/1173
fails to load (Works on Chrome)
Attachments
WGSL source
(26.30 KB, text/plain)
2024-07-05 12:17 PDT
,
Mike Wyrzykowski
no flags
Details
Generated metal
(10.58 KB, text/x-csrc)
2024-07-05 12:17 PDT
,
Mike Wyrzykowski
no flags
Details
rendering in safari, firefox, chrome
(3.44 MB, image/png)
2024-07-07 23:49 PDT
,
Karl Dubost
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-07-05 12:14:42 PDT
program_source:315:20: error: no matching function for call to '__unpack' function55(__unpack(global19.field24[min(parameter67.x, (10000u - 1u))].field17), vec<float, 3>(1., 0.4000000059604645, 0.), global20, global21, global22); ^~~~~~~~
Radar WebKit Bug Importer
Comment 2
2024-07-05 12:14:47 PDT
<
rdar://problem/131184432
>
Mike Wyrzykowski
Comment 3
2024-07-05 12:17:19 PDT
Created
attachment 471821
[details]
WGSL source
Mike Wyrzykowski
Comment 4
2024-07-05 12:17:42 PDT
Created
attachment 471822
[details]
Generated metal
Karl Dubost
Comment 5
2024-07-07 23:49:05 PDT
Created
attachment 471835
[details]
rendering in safari, firefox, chrome Safari Technology Preview 18.0 20619.1.20.7 Firefox Nightly 129.0a1 12924.7.4 Google Chrome Canary 128.0.6582.0 6582.0
Tadeu Zagallo
Comment 6
2024-07-08 08:15:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30566
EWS
Comment 7
2024-07-09 05:35:05 PDT
Committed
280769@main
(ee913e1ce61d): <
https://commits.webkit.org/280769@main
> Reviewed commits have been landed. Closing PR #30566 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug