[WebGPU] https://compute.toys/view/1173 fails to load https://bugs.webkit.org/show_bug.cgi?id=276262 rdar://131184432

Reviewed by Mike Wyrzykowski.

There was an incorrect condition that we should only emit a packed type if it was
constructible. This was implemented to fix a test, but the test still passes after
changing it back, which makes me think there was an underlying issue that has already
been fixed.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/packing.wgsl:

Canonical link: https://commits.webkit.org/280769@main