Source/WebGPU/WGSL/tests/valid/packing.wgsl
@@ -453,6 +453,20 @@ fn testPackedVec3CompoundAssignment()
     D[0] += vec3f(1);
 }
 
+struct InconstructibleS {
+    x: vec3f,
+    y: atomic<u32>
+}
+struct InconstructibleT {
+    x: InconstructibleS,
+}
+
+@group(0) @binding(12) var<storage, read_write> global: InconstructibleT;
+
+fn testInconstructible() {
+    var x = global.x.x;
+}
+
 @compute @workgroup_size(1)
 fn main()
 {
@@ -465,4 +479,5 @@ fn main()
     _ = testCall();
     testRuntimeArray();
     testPackedVec3CompoundAssignment();
+    testInconstructible();
 }
